--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -16,7 +16,7 @@
           <tr>
             <td>
               <%= link_to "退会しない", customer_path, class: 'btn-sm btn-primary' %>
-              <%= link_to "退会する", destroy_customer_session_path, method: :delete, class: 'btn-sm btn-danger' %>
+              <%= link_to "退会する", withdrawal_path, method: :patch, class: 'btn-sm btn-danger' %>
             </td>
           </tr>
         </tbody>
