--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div>
   <%= flash[:notice] %>
 </div>
-<div class="container">
+<div class="container container-m">
   <div class="row">
     <div class="col-md-12 cover-img" style = "background-image : url('app/assets/images/no_image.jpg');">
       <div class="cover-text text-center">
@@ -11,24 +11,22 @@
         <p>購入には会員登録が必要になります。</p>
       </div>
     </div>
-    <div class="col-md-12">
-      <h2 class = "background-color #E5E4E2">新着商品</h2>
-        <table>
-          <tbody>
-            <tr>
-              <% @items.each do |item| %>
-              <td>
-                <%= image_tag item.get_image(100,100) %><br>
-                <%= item.name %><br>
-                <%= item.price.to_s(:delimited) %>
-              </td>
-              <% end %>
-            </tr>
-          </tbody>
-        </table>
-            <div>
-              <%= link_to "全ての商品を見る", items_path %>
-            </div>
+  </div>
+</div>
+
+<div class="container container-m">
+<h2 >新着商品</h2>
+<div class="card-deck">
+  <% @items.each do |item| %>
+  <div class="card border-0">
+   <div class="card-body">
+     <h5 class="card-title"><%= image_tag item.get_image(100,100) %></h5>
+      <p class="card-text"><%= item.name %></p>
+      <p class="card-text">￥<%= item.price.to_s(:delimited) %></p>
     </div>
+  </div>
+  <% end %>
+  <div>
+    <%= link_to "全ての商品を見る", items_path %>
   </div>
 </div>
