--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -20,24 +20,39 @@
           </tbody>
       </table>
     </div>
-    <div class="col-md-10">
-      <h2>商品一覧</h2>
-      <div class="list-wrap">
-        <% @items.each do |item| %>
-          <% if item.image.attached? %>
-            <%= image_tag item.image, :size =>'100x100' %>
-          <% else %>
-            <%= image_tag 'no_image', size: "100x100" %>
-          <% end %>
-          <div class="list-item">
-            <%= link_to item_path(item.id) do %>
-              <%= item.name %>
-            <% end %>
+  </div>
+</div>
+<div class="container container-m">
+  <div class="row">
+  <div class="col-lg-10">
+    <h2>商品一覧</h2>
+    <div class="card-deck">
+      <% @items.each do |item| %>
+      <div class="d-flex flex-wrap justify-content-center">
+        <div class="card border-0">
+          <div class="card-body">
+            <h5 class="card-title"><%= image_tag item.get_image(100,100) %></h5>
+            <p class="card-text">
+              <%= link_to item_path(item.id) do %>
+                <%= item.name %>
+              <% end %>
+            </p>
+            <p class="card-text">￥<%= item.price.to_s(:delimited) %></p>
           </div>
-          <div>
-            ￥<%= item.price.to_s(:delimited) %>
-          </div>
-        <% end %>
+        </div>
+      </div>
+      <% end %>
+    </div>
+  </div>
+  </div>
+</div>
+<div class="container container-m">
+  <div class="row">
+    <div class="col-lg-10">
+      <div class="d-flex flex-wrap">
+        <div>
+          <%= paginate @items %>
+        </div>
       </div>
     </div>
   </div>
